--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   background-color: var(--basic-dark);
   padding: 0 !important;
+  z-index: 5;
   #b3-logo {
     position: absolute;
     top: 10px;
