--- a/src/components/TransitionWave/TransitionWave.scss
+++ b/src/components/TransitionWave/TransitionWave.scss
@@ -2,7 +2,7 @@
   background-color: var(--accent-dark);
   width: 100vw;
   min-height: 0;
-  padding: 0 5%;
+  padding: 60px 5% 0 !important;
   height: 60px;
   --size: 30px;
   --R: calc(var(--size) * 1.28);
